# OGSEngine

./: CLAUDE.md  CMakeLists.txt
res/: assets.json  buttons.pack  enemiesArays.json
src/: CMakeLists.txt  Macroses.h  OGSEngine.cpp  OGSEngine.h
src/backends/: AppWindow.h
src/backends/desktop/: window.cpp  window.h
src/backends/macos/: MetalWindowHelper.h  MetalWindowHelper.mm  mactest.cpp  mactest.h
src/concurrent/: Queue.h  Task.h  ThreadPoolExecutor.h  Worker.h
src/core/: Reference.h  Timer.cpp  Timer.h
src/input/: Input.cpp  Input.h  InputProcessor.cpp  InputProcessor.h  KeyboardCodes.h  KeyboardController.cpp  KeyboardController.h  MouseController.cpp  MouseController.h  TouchInputController.cpp  TouchInputController.h
src/memory/: Allocator.cpp  Allocator.h  Pool.cpp  Pool.h  PoolManager.cpp  PoolManager.h  memory.h
src/monitoring/: FPSCounter.cpp  FPSCounter.h  Logsystem.h
src/old_in_render/: FreeTypeFont.cpp  FreeTypeFont.h  FreeTypeManager.cpp  FreeTypeManager.h  Mesh.cpp  Mesh.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/render/: IRenderer.h  PixelFormat.h  RenderExtractor.cpp  RenderExtractor.h  RenderQueue.h  RendererFactory.cpp  RendererFactory.h  SpriteBatcher.cpp  SpriteBatcher.h  TextureHandle.h
src/render/metal/: MetalImpl.cpp  MetalRenderer.cpp  MetalRenderer.h
src/render/metal/shaders/: sprite.metal  triangle.metal
src/storage/: AssetManager.cpp  AssetManager.h  AtlasLoader.cpp  AtlasLoader.h  FileSystemUtil.cpp  FileSystemUtil.h  FreeTypeFont.cpp  FreeTypeFont.h  Mesh.cpp  Mesh.h  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceHolder.cpp  ResourceHolder.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/utils/: utils.cpp  utils.h
src/world/: Camera.h  GameObject.h  World.cpp  World.h
